style.css
body {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    font-family: "Roboto", sans-serif;
}

.main-container {
    display: flex;
    flex: 1;
    flex-direction: column;
    align-items: center;
}

.header {
    display: flex;
    align-self: stretch;
    align-items: center;
    justify-content: space-between;
    background-color: #0d1724;
    padding: 20px 10% 20px 10%;
}

.logo {
    display: flex;
    height: 100px;
    width: 120px;
    color: #F9FAF8;
    font-size: 24px;
    font-weight: bold;
}

.logo h1 {
    align-self: center;
    margin: 0px;
    padding: 0px;
}

.links {
    display: flex;
    margin-left: auto;
    gap: 32px;
    flex-wrap: wrap;
    max-width: 50%;
}

.links a {
    color: #F9FAF8;
    text-decoration: none;
}

.hero-container {
    display: flex;
    align-items: center;
    align-self: stretch;
    justify-content: space-between;
    gap: 20px;
    padding: 20px 10% 20px 10%;
    background-color: #1F2937;
    min-height: 300px;
    flex: 1;
}

.awesome-container {
    display: flex;
    flex: 0 1 50%;
    flex-direction: column;
}

.awesome-text {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
    padding: 0px;
    margin: 0px;
}

.awesome-subtext{
    padding: 0px;
    margin: 0px;
    color: #F9FAF8;
}

.awesome-button {
    background-color: #3882F6;
    font-weight: bold;
    border-radius: 10px;
    color: white;
    padding: 10px 20px;
    align-self: flex-start;
    border-style: none;
    margin-top: 10px;
}

.placeholder {
    display: flex;
}

.placeholder img {
    flex: 0 1 auto;
    max-height: 300px;
    width: auto;
}

.card-info-container {
    display: flex;
    align-self: stretch;
    padding-left: 10%;
    padding-right: 10%;
    flex-direction: column;
    min-height: 300px;
    padding: 20px 10% 20px 10%;
}

.info {
    text-align: center;
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
    margin-bottom: 20px;
}

.card-container {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    gap: 20px;
}

.card-wrap {
    display: flex;
    flex-direction: column;
    max-width: 160px;
    flex: 0 0 auto;
}

.card {
    display: flex;
    justify-content: center;
    border: 2px solid #3882F6;
    border-radius: 10px;
    margin-bottom: 10px;
}

.card img {
    border-radius: 10px;
    width: 150px;
    height: 175px;
}

.card-text {
    font-size: 12px;
    text-align: center;
}

.quote-container {
    display: flex;
    padding: 20px 10% 20px 10%;
    flex-direction: column;
    align-self: stretch;
    align-items: center;
    justify-content: center;
    height: 250px;
    background-color: #E5E7EB;
}

.quote{
    font-size: 36px;
    font-style: italic;
    color: #1F2937;
}

.author{
    align-self: flex-end;
    font-weight: bold;
}

.action-container{
    display: flex;
    justify-content: space-around;
    align-self: stretch;
    align-items: center;
    height: 200px;
    background-color: #3882F6;
    margin-left: 10%;
    margin-right: 10%;
    height: 100px;
    margin-top: 100px;
    margin-bottom: 100px;
    border-radius: 5px;
}

.action-text {
    display: flex;
    flex-direction: column;
}

.action-text h1 {
    margin: 0px;
    padding: 0px;
    font-size: 20px;
    color:#F9FAF8;
}

.action-text p {
    margin: 0px;
    padding: 0px;
    font-size: 12px;
    color:#F9FAF8;
}

.action-button {
    background-color: #3882F6;
    font-weight: bold;
    border-radius: 10px;
    color: white;
    padding: 10px 20px;
    border: 2px solid #F9FAF8;
}

.footer {
    display: flex;
    background-color: #1F2937;
    align-items: center;
    justify-content: center;
    align-self: stretch;
    height: 60px;
    color: #F9FAF8;
}

